--- a/test/tc.gate4/config.2
+++ b/test/tc.gate4/config.2
@@ -1,5 +1,5 @@
 #
-# $Id: config.2,v 1.2 1996/08/26 19:10:36 mj Exp $
+# $Id: config.2,v 1.3 1998/01/28 22:00:30 mj Exp $
 #
 # Test config.gate with RFCLevel 2, UseOrganizationForOrigin
 #
@@ -8,4 +8,4 @@
 RFCLevel 2
 UseOrganizationForOrigin
 
-include %L/config.gate
+include ../cf/gate.conf
